style.css
/* ... */
@media screen and (min-width: 1917px) and (max-width: 1954px) {
  #zero-one {
    left: 78%;
  }
}

@media screen and (min-width: 1782px) and (max-width: 1960px) {
  #main-paragraph {
    top: 15rem;
    font-size: 1.1rem;
  }

  #images {
    top: -29rem;
  }
}

@media screen and (min-width: 1704px) and (max-width: 1781px) {
  #images {
    top: -26rem;
  }

  #main-paragraph {
    top: 14rem;
    font-size: 1rem;
  }
}

@media screen and (min-width: 1603px) and (max-width: 1703px) {
  #images {
    top: -22rem;
  }
}

@media (max-width: 1362px) {
  #about-text {
    font-size: 6rem;
    left: 18%;
    top: 62px;
  }

  #main-paragraph {
    top: 164px;
  }

  #images {
    top: -412px;
  }
}

@media (max-width: 1293px) {
  #about-text {
    font-size: 5.5rem;
  }

  #main-paragraph {
    font-size: 0.7rem;
  }

  #images {
    top: -283px;
  }
}

@media screen and (max-width: 1239px) {
  #images {
    top: -302px;
  }
}

@media (max-width: 1167px) {
  #about-text {
    font-size: 5rem;
  }

  #zero-one {
    font-size: 2.5rem;
  }

  #main-paragraph {
    top: 144px;
  }
}

@media (max-width: 1095px) {
  #about-text {
    font-size: 4.5rem;
    top: 49px;
  }

  #zero-one {
    font-size: 2.2rem;
  }

  #main-paragraph {
    top: 124px;
  }

  #images {
    top: -332px;
  }
}

@media screen and (max-width: 1024px) {
  #about-text {
    font-size: 4rem;
    top: 49px;
  }

  #zero-one {
    font-size: 2rem;
  }

  #main-paragraph {
    top: 104px;
    font-size: 0.74rem;
  }

  #images {
    top: -347px;
  }

  #about {
    left: -10%;
  }
}

@media screen and (max-width: 960px) {
  #about-text {
    font-size: 3.5rem;
    top: 49px;
  }

  #zero-one {
    font-size: 1.8rem;
  }

  #main-paragraph {
    top: 109px;
    font-size: 0.64rem;
  }

  #images {
    top: -276px;
  }
}

@media screen and (max-width: 900px) {
  #about-text {
    font-size: 3rem;
    top: 49px;
  }

  #zero-one {
    font-size: 1.6rem;
  }

  #main-paragraph {
    top: 114px;
    font-size: 0.53rem;
  }

  #images {
    top: -220px;
  }
}

@media screen and (max-width: 870px) {
  #about-text {
    top: 60px;
  }
}

#GreenBGMobile,
#MobileComp {
  display: none;
}

@media screen and (max-width: 768px) {
  #images {
    display: none;
  }

  #GreenBGMobile {
    display: block;
    width: 100%;
    left: -5%;
    position: relative;
  }

  #MobileComp {
    display: block;
    width: 100%;
    position: relative;
    left: 5%;
    top: -45px;
  }

  #mobile-images {
    position: relative;
    top: -100px;
    width: 44%;
    left: 31%;
  }

  #about-text {
    -webkit-text-stroke: 2px black;
  }

  #zero-one {
    top: 65px;
    -webkit-text-stroke: 2px black;
  }

  #main-paragraph {
    top: 149px;
    left: 37%;
  }

  #about {
    height: 104vw;
  }
}

@media screen and (max-width: 700px) {
  #mobile-images {
    top: -100px;
  }

  #main-paragraph {
    top: 136px;
    font-size: 0.5rem;
  }
}

@media screen and (max-width: 662px) {
  #about {
    height: 107vw;
  }
}

@media screen and (max-width: 630px) {
  #mobile-images {
    top: -100px;
    width: 55%;
    left: 27%;
  }

  #main-paragraph {
    top: 152px;
    font-size: 0.64rem;
    width: 40%;
    left: 32%;
  }

  #about {
    height: 132vw;
  }
}

@media screen and (max-width: 598px) {
  #about {
    height: 142vw;
  }
}

@media screen and (max-width: 581px) {
  #mobile-images {
    top: -123px;
    width: 60%;
    left: 25%;
  }

  #main-paragraph {
    top: 152px;
    font-size: 0.6rem;
    width: 40%;
    left: 30%;
  }
}

@media screen and (max-width: 569px) {
  #mobile-images {
    top: -112px;
  }

  #main-paragraph {
    top: 163px;
    left: 33%;
  }
}

@media screen and (max-width: 530px) {
  #zero-one {
    top: 77px;
  }

  #main-paragraph {
    top: 136px;
    left: 30%;
    width: 45%;
  }

  #mobile-images {
    top: -128px;
  }
}

@media screen and (max-width: 482px) {
  #mobile-images {
    top: -79px;
  }

  #main-paragraph {
    font-size: 0.53rem;
  }
}

@media screen and (max-width: 461px) {
  #about {
    height: 146vw;
  }
}

@media screen and (max-width: 430px) {
  #mobile-images {
    top: -94px;
  }
}

@media screen and (max-width: 413px) {
  #mobile-images {
    top: -52px;
  }

  #main-paragraph {
    font-size: 0.45rem;
  }
}

@media screen and (max-width: 360px) {
  #main-paragraph {
    font-size: 0.34rem;
    top: 141px;
  }

  #mobile-images {
    top: -4px;
  }
}
/* ---------------------------------------- ABOUT SECTION ENDS HERE --------------------------------------------- */

/* ---------------------------------------- SPONSORS SECTION STARTS HERE --------------------------------------------- */
@font-face {
  font-family: AnimeAce2BB;
  src: url('fonts/anime_ace_bb/animeace2bb_ot/AnimeAce20BbBold-2Av.ttf');
}

body {
  background-color: #f4e1b9;
}
.sponsor-heading {
  color: #e82338;

  text-shadow: 0.33vw 0.46vw 0 #000;
  font-family: Bangers, monospace;
  font-size: 10vw;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  letter-spacing: 0.7vw;
  position: relative;
  top: 0vw;
  right: 45vw;
}

.rectangle {
  width: 56.93vw; /*854 182*/
  height: 12.13vw;
  flex-shrink: 0;
  border: 0.6vw solid #000;
  background: #0f283f;
  z-index: -1;
}
.star-one {
  width: 4.53vw;
  height: 6.86vw;
  flex-shrink: 0;
  fill: #fff;
  stroke-width: 0.13vw;
  stroke: #000;
  position: relative;
  bottom: 4.5vw;
}
.star-two {
  width: 2.13vw;
  height: 3.26vw;
  flex-shrink: 0;
  fill: #fff;
  stroke-width: 0.13vw;
  stroke: #000;
  position: relative;
  top: 3vw;
  left: 15vw;
}
.star-three {
  width: 3.4vw;
  height: 5.2vw;
  flex-shrink: 0;
  fill: #fff;
  stroke-width: 0.13vw;
  stroke: #000;
  position: relative;
  bottom: 3.5vw;
  left: 14vw;
}

.star-four {
  width: 2.2vw;
  height: 3.33vw;
  flex-shrink: 0;
  fill: #fff;
  stroke-width: 0.13vw;
  stroke: #000;
  position: relative;
  top: 4vw;
  left: 35vw;
}
/* ... */

